<resources>
    <string name="app_name">TestCalendar</string>

    <string name="cdrp_mon">Mon</string>
    <string name="cdrp_tue">Tue</string>
    <string name="cdrp_wed">Wed</string>
    <string name="cdrp_thu">Thu</string>
    <string name="cdrp_fri">Fri</string>
    <string name="cdrp_sat">Sat</string>
    <string name="cdrp_sun">Sun</string>

    <string-array name="week_sun_sat">
        <item>@string/cdrp_sun</item>
        <item>@string/cdrp_mon</item>
        <item>@string/cdrp_tue</item>
        <item>@string/cdrp_wed</item>
        <item>@string/cdrp_thu</item>
        <item>@string/cdrp_fri</item>
        <item>@string/cdrp_sat</item>
    </string-array>
</resources>