<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llTitleWeekContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDayOfWeek1"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:tag="dayOfWeek1"
            android:text="@string/cdrp_sun"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/tvDayOfWeek2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDayOfWeek2"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:tag="dayOfWeek2"
            android:text="@string/cdrp_mon"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/tvDayOfWeek3"
            app:layout_constraintStart_toEndOf="@id/tvDayOfWeek1"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDayOfWeek3"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:tag="dayOfWeek3"
            android:text="@string/cdrp_tue"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/tvDayOfWeek4"
            app:layout_constraintStart_toEndOf="@id/tvDayOfWeek2"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDayOfWeek4"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:tag="dayOfWeek4"
            android:text="@string/cdrp_wed"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/tvDayOfWeek5"
            app:layout_constraintStart_toEndOf="@id/tvDayOfWeek3"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDayOfWeek5"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:tag="dayOfWeek5"
            android:text="@string/cdrp_thu"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/tvDayOfWeek6"
            app:layout_constraintStart_toEndOf="@id/tvDayOfWeek4"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDayOfWeek6"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:tag="dayOfWeek6"
            android:text="@string/cdrp_fri"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/tvDayOfWeek7"
            app:layout_constraintStart_toEndOf="@id/tvDayOfWeek5"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDayOfWeek7"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:tag="dayOfWeek7"
            android:text="@string/cdrp_sat"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvDayOfWeek6"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/llDaysContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingVertical="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llTitleWeekContainer">

        <include
            android:id="@+id/rlDayContainer1"
            layout="@layout/layout_calendar_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/rlDayContainer2"
            layout="@layout/layout_calendar_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/rlDayContainer3"
            layout="@layout/layout_calendar_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/rlDayContainer4"
            layout="@layout/layout_calendar_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/rlDayContainer5"
            layout="@layout/layout_calendar_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/rlDayContainer6"
            layout="@layout/layout_calendar_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>